--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "@tsconfig/node18/tsconfig.json",
     "compilerOptions": {
-        "rootDie": "./src",
+        "rootDir": "./src",
         "outDir": "./dist",
         "declaration": true
     },
